--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="logo">Vertex</a>
+      <a href="/" class="logo">Vertex</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -191,7 +191,7 @@
     <div class="container">
       <div class="footer-inner">
         <div class="footer-brand">
-          <a href="index.html" class="logo">Vertex</a>
+          <a href="/" class="logo">Vertex</a>
           <p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p>
         </div>
         <nav class="footer-nav" aria-label="Footer">
