--- a/approach.html
+++ b/approach.html
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="index.html" class="logo">Vertex</a>
+      <a href="/" class="logo">Vertex</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -35,7 +35,7 @@
   <main>
     <section class="page-hero">
       <div class="container">
-        <nav class="breadcrumb" aria-label="Breadcrumb"><a href="index.html">Home</a> <span class="breadcrumb-sep">/</span> <span>Approach</span></nav>
+        <nav class="breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span class="breadcrumb-sep">/</span> <span>Approach</span></nav>
         <h1 class="page-hero-title" data-animate>How we work</h1>
         <p class="page-hero-lead" data-animate data-animate-delay="1">Direct, transparent, and flexible. We scope the work, agree on outcomes, and execute with clear communication at every step. No heavy sales process—you work with the people doing the work.</p>
       </div>
@@ -100,7 +100,7 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-inner">
-        <div class="footer-brand"><a href="index.html" class="logo">Vertex</a><p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p></div>
+        <div class="footer-brand"><a href="/" class="logo">Vertex</a><p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p></div>
         <nav class="footer-nav" aria-label="Footer">
           <a href="services.html">Services</a><a href="approach.html">Approach</a><a href="work.html">Work</a><a href="about.html">About</a><a href="clients.html">Clients</a><a href="contact.html">Contact</a>
         </nav>
