--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us — Vertex Technology Partners</title>
-  <meta name="description" content="Who we are: mission, values, and the team behind Vertex. IT and AI consulting with a focus on delivery and partnership.">
+  <title>About Us — Sikor Consultant</title>
+  <meta name="description" content="Who we are: mission, values, and the team behind Sikor Consultant. AI product development and a business partner to developers and teams.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=IBM+Plex+Mono:wght@400;500&family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="/" class="logo">Vertex</a>
+      <a href="/" class="logo">Sikor</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -36,8 +36,8 @@
     <section class="page-hero">
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span class="breadcrumb-sep">/</span> <span>About</span></nav>
-        <h1 class="page-hero-title" data-animate>About Vertex</h1>
-        <p class="page-hero-lead" data-animate data-animate-delay="1">We're a team of engineers and strategists who help companies ship better systems. Founded in 2016, we work directly with enterprises and growing teams—no heavy sales, no rigid playbooks. We focus on delivery and long-term partnership.</p>
+        <h1 class="page-hero-title" data-animate>About Sikor Consultant</h1>
+        <p class="page-hero-lead" data-animate data-animate-delay="1">We're a team focused on AI product development and IT consulting. We partner with developers and teams to ship better systems—no heavy sales, no rigid playbooks. We focus on delivery and long-term partnership.</p>
       </div>
     </section>
 
@@ -59,7 +59,7 @@
     <section class="section content-section content-section-alt">
       <div class="container">
         <p class="section-eyebrow" data-animate>Our team</p>
-        <h2 class="section-title" data-animate data-animate-delay="1">The people behind Vertex</h2>
+        <h2 class="section-title" data-animate data-animate-delay="1">The people behind Sikor Consultant</h2>
         <p class="section-lead" data-animate data-animate-delay="2">Senior engineers, architects, and strategists with backgrounds in enterprise IT, product, and consulting. We work in small pods so you get consistency and depth.</p>
         <div class="team-grid">
           <div class="team-card" data-animate data-animate-delay="0">
@@ -117,11 +117,11 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-inner">
-        <div class="footer-brand"><a href="/" class="logo">Vertex</a><p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p></div>
+        <div class="footer-brand"><a href="/" class="logo">Sikor</a><p class="footer-tagline">AI product development and a trusted business partner to developers and teams.</p></div>
         <nav class="footer-nav" aria-label="Footer">
           <a href="services.html">Services</a><a href="approach.html">Approach</a><a href="work.html">Work</a><a href="about.html">About</a><a href="clients.html">Clients</a><a href="contact.html">Contact</a>
         </nav>
-        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Vertex Technology Partners. All rights reserved.</p></div>
+        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Sikor Consultant. All rights reserved.</p></div>
       </div>
     </div>
   </footer>
