--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact — Vertex Technology Partners</title>
+  <title>Contact — Sikor Consultant</title>
   <meta name="description" content="Get in touch. Tell us about your project—we'll respond within one business day.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="/" class="logo">Vertex</a>
+      <a href="/" class="logo">Sikor</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -45,7 +45,7 @@
       <div class="container">
         <div class="contact-wrap">
           <div class="contact-intro">
-            <p class="contact-email">Prefer email? <a href="mailto:hello@vertex-partners.com">hello@vertex-partners.com</a></p>
+            <p class="contact-email">Prefer email? <a href="mailto:hello@sikorconsultant.com">hello@sikorconsultant.com</a></p>
             <p class="contact-note">We work with companies and teams of all sizes. Share a brief description of your challenge or goals and we'll come back with next steps.</p>
           </div>
           <form class="contact-form" action="#" method="post">
@@ -75,11 +75,11 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-inner">
-        <div class="footer-brand"><a href="/" class="logo">Vertex</a><p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p></div>
+        <div class="footer-brand"><a href="/" class="logo">Sikor</a><p class="footer-tagline">AI product development and a trusted business partner to developers and teams.</p></div>
         <nav class="footer-nav" aria-label="Footer">
           <a href="services.html">Services</a><a href="approach.html">Approach</a><a href="work.html">Work</a><a href="about.html">About</a><a href="clients.html">Clients</a><a href="contact.html">Contact</a>
         </nav>
-        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Vertex Technology Partners. All rights reserved.</p></div>
+        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Sikor Consultant. All rights reserved.</p></div>
       </div>
     </div>
   </footer>
