--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services — Vertex Technology Partners</title>
-  <meta name="description" content="IT and AI consulting services: strategy, architecture, implementation, security, and ongoing support.">
+  <title>Services — Sikor Consultant</title>
+  <meta name="description" content="AI product development and IT consulting: strategy, architecture, implementation, security, and ongoing support. Partner with developers and teams.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=IBM+Plex+Mono:wght@400;500&family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="/" class="logo">Vertex</a>
+      <a href="/" class="logo">Sikor</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -37,7 +37,7 @@
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span class="breadcrumb-sep">/</span> <span>Services</span></nav>
         <h1 class="page-hero-title" data-animate>What we do</h1>
-        <p class="page-hero-lead" data-animate data-animate-delay="1">Full-stack IT and AI consulting—from strategy and architecture to implementation, security, and ongoing operations. We help enterprises and growing teams ship better systems.</p>
+        <p class="page-hero-lead" data-animate data-animate-delay="1">AI product development and full-stack IT consulting—from strategy and architecture to implementation and support. We partner with developers and teams to ship better systems.</p>
       </div>
     </section>
 
@@ -133,11 +133,11 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-inner">
-        <div class="footer-brand"><a href="/" class="logo">Vertex</a><p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p></div>
+        <div class="footer-brand"><a href="/" class="logo">Sikor</a><p class="footer-tagline">AI product development and a trusted business partner to developers and teams.</p></div>
         <nav class="footer-nav" aria-label="Footer">
           <a href="services.html">Services</a><a href="approach.html">Approach</a><a href="work.html">Work</a><a href="about.html">About</a><a href="clients.html">Clients</a><a href="contact.html">Contact</a>
         </nav>
-        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Vertex Technology Partners. All rights reserved.</p></div>
+        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Sikor Consultant. All rights reserved.</p></div>
       </div>
     </div>
   </footer>
