--- a/clients.html
+++ b/clients.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clients & Testimonials — Vertex Technology Partners</title>
-  <meta name="description" content="What clients say about Vertex. Testimonials and industries we serve.">
+  <title>Clients & Testimonials — Sikor Consultant</title>
+  <meta name="description" content="What clients say about Sikor Consultant. Testimonials and industries we serve.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=IBM+Plex+Mono:wght@400;500&family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="/" class="logo">Vertex</a>
+      <a href="/" class="logo">Sikor</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -37,7 +37,7 @@
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a> <span class="breadcrumb-sep">/</span> <span>Clients</span></nav>
         <h1 class="page-hero-title" data-animate>Clients & testimonials</h1>
-        <p class="page-hero-lead" data-animate data-animate-delay="1">We work with companies and teams across industries. Here's what they say about working with Vertex.</p>
+        <p class="page-hero-lead" data-animate data-animate-delay="1">We work with companies and teams across industries. Here's what they say about working with Sikor Consultant.</p>
       </div>
     </section>
 
@@ -63,7 +63,7 @@
         <div class="testimonials-grid testimonials-grid-full">
           <blockquote class="testimonial" data-animate data-animate-delay="0">
             <div class="testimonial-quote">"</div>
-            <p>Vertex came in, understood our stack quickly, and delivered on time. No fluff—just solid engineering and clear communication.</p>
+            <p>Sikor Consultant came in, understood our stack quickly, and delivered on time. No fluff—just solid engineering and clear communication.</p>
             <footer><cite>CTO, SaaS company (120 employees)</cite></footer>
           </blockquote>
           <blockquote class="testimonial" data-animate data-animate-delay="1">
@@ -73,7 +73,7 @@
           </blockquote>
           <blockquote class="testimonial" data-animate data-animate-delay="2">
             <div class="testimonial-quote">"</div>
-            <p>As a solo founder I didn't have an in-house team. Vertex felt like an extension of my team—responsive, pragmatic, and they got us to launch.</p>
+            <p>As a solo founder I didn't have an in-house team. Sikor Consultant felt like an extension of my team—responsive, pragmatic, and they got us to launch.</p>
             <footer><cite>Founder, B2B startup</cite></footer>
           </blockquote>
           <blockquote class="testimonial" data-animate data-animate-delay="3">
@@ -99,11 +99,11 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-inner">
-        <div class="footer-brand"><a href="/" class="logo">Vertex</a><p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p></div>
+        <div class="footer-brand"><a href="/" class="logo">Sikor</a><p class="footer-tagline">AI product development and a trusted business partner to developers and teams.</p></div>
         <nav class="footer-nav" aria-label="Footer">
           <a href="services.html">Services</a><a href="approach.html">Approach</a><a href="work.html">Work</a><a href="about.html">About</a><a href="clients.html">Clients</a><a href="contact.html">Contact</a>
         </nav>
-        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Vertex Technology Partners. All rights reserved.</p></div>
+        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Sikor Consultant. All rights reserved.</p></div>
       </div>
     </div>
   </footer>
