--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vertex Technology Partners — IT & AI Consulting</title>
-  <meta name="description" content="Vertex delivers enterprise IT and AI consulting. Strategy, implementation, and support with a proven track record across industries.">
+  <title>Sikor Consultant — AI Product Development & IT Consulting</title>
+  <meta name="description" content="Sikor Consultant: AI product development, IT consulting, and a trusted business partner to developers and teams. Strategy, implementation, and support.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=IBM+Plex+Mono:wght@400;500&family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="/" class="logo">Vertex</a>
+      <a href="/" class="logo">Sikor</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -56,9 +56,9 @@
   <main>
     <section class="hero">
       <div class="hero-inner">
-        <p class="hero-label hero-reveal"><span class="hero-label-dot"></span> IT & AI consulting that delivers</p>
-        <h1 class="hero-title hero-reveal">We help companies and teams ship better systems—on time and on budget.</h1>
-        <p class="hero-lead hero-reveal">From strategy and architecture to AI adoption and implementation. One team that owns the full picture. Enterprise and SMB.</p>
+        <p class="hero-label hero-reveal"><span class="hero-label-dot"></span> AI product development & IT consulting</p>
+        <h1 class="hero-title hero-reveal">We build AI products and partner with devs and teams to ship better systems—on time and on budget.</h1>
+        <p class="hero-lead hero-reveal">AI product development, strategy, and implementation. We act as your business partner and work alongside developers and teams. Enterprise and SMB.</p>
         <div class="hero-actions hero-reveal">
           <a href="contact.html" class="btn btn-primary"><span>Start a conversation</span><svg class="btn-arrow" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
           <a href="work.html" class="btn btn-secondary">See our work</a>
@@ -90,7 +90,7 @@
       <div class="container">
         <p class="section-eyebrow" data-animate>What we do</p>
         <h2 class="section-title" data-animate data-animate-delay="1">Full-stack expertise, one team</h2>
-        <p class="section-lead" data-animate data-animate-delay="2">Strategy, implementation, security, and AI—so you get a single team that can own the full picture.</p>
+        <p class="section-lead" data-animate data-animate-delay="2">AI product development, strategy, implementation, and security. We partner with developers and teams so you get one team that owns the full picture.</p>
         <ul class="services-grid services-grid-preview">
           <li class="service-card" data-animate data-animate-delay="0">
             <span class="service-num" aria-hidden="true">01</span>
@@ -163,7 +163,7 @@
         <div class="testimonials-grid">
           <blockquote class="testimonial" data-animate data-animate-delay="0">
             <div class="testimonial-quote">"</div>
-            <p>Vertex came in, understood our stack quickly, and delivered on time. No fluff—just solid engineering and clear communication.</p>
+            <p>Sikor Consultant came in, understood our stack quickly, and delivered on time. No fluff—just solid engineering and clear communication.</p>
             <footer><cite>CTO, SaaS company (120 employees)</cite></footer>
           </blockquote>
           <blockquote class="testimonial" data-animate data-animate-delay="1">
@@ -191,8 +191,8 @@
     <div class="container">
       <div class="footer-inner">
         <div class="footer-brand">
-          <a href="/" class="logo">Vertex</a>
-          <p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p>
+          <a href="/" class="logo">Sikor</a>
+          <p class="footer-tagline">AI product development and a trusted business partner to developers and teams.</p>
         </div>
         <nav class="footer-nav" aria-label="Footer">
           <a href="services.html">Services</a>
@@ -203,7 +203,7 @@
           <a href="contact.html">Contact</a>
         </nav>
         <div class="footer-bottom">
-          <p class="footer-copy">&copy; 2025 Vertex Technology Partners. All rights reserved.</p>
+          <p class="footer-copy">&copy; 2025 Sikor Consultant. All rights reserved.</p>
         </div>
       </div>
     </div>
