--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Work — Vertex Technology Partners</title>
+  <title>Our Work — Sikor Consultant</title>
   <meta name="description" content="Case studies and recent engagements: cloud migration, compliance platforms, security and operations.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <div class="header-inner">
-      <a href="/" class="logo">Vertex</a>
+      <a href="/" class="logo">Sikor</a>
       <nav class="nav" aria-label="Main">
         <ul>
           <li><a href="services.html">Services</a></li>
@@ -99,11 +99,11 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-inner">
-        <div class="footer-brand"><a href="/" class="logo">Vertex</a><p class="footer-tagline">IT & AI consulting for companies and teams that need results.</p></div>
+        <div class="footer-brand"><a href="/" class="logo">Sikor</a><p class="footer-tagline">AI product development and a trusted business partner to developers and teams.</p></div>
         <nav class="footer-nav" aria-label="Footer">
           <a href="services.html">Services</a><a href="approach.html">Approach</a><a href="work.html">Work</a><a href="about.html">About</a><a href="clients.html">Clients</a><a href="contact.html">Contact</a>
         </nav>
-        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Vertex Technology Partners. All rights reserved.</p></div>
+        <div class="footer-bottom"><p class="footer-copy">&copy; 2025 Sikor Consultant. All rights reserved.</p></div>
       </div>
     </div>
   </footer>
