update about us

--- a/about.html
+++ b/about.html
@@ -63,28 +63,64 @@
         <p class="section-lead" data-animate data-animate-delay="2">Senior engineers, architects, and strategists with backgrounds in enterprise IT, product, and consulting. We work in small pods so you get consistency and depth.</p>
         <div class="team-grid">
           <div class="team-card" data-animate data-animate-delay="0">
-            <div class="team-card-avatar" aria-hidden="true"><span>JK</span></div>
-            <h3 class="team-card-name">James Kim</h3>
-            <p class="team-card-role">Managing Partner & Lead Architect</p>
-            <p class="team-card-bio">Former principal at a global consultancy. Focus on strategy, cloud, and large-scale migrations.</p>
+            <div class="team-card-avatar" aria-hidden="true"><img src="Amalendu.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Amalendu</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">AI product development and delivery. Strategy and implementation.</p>
           </div>
           <div class="team-card" data-animate data-animate-delay="1">
-            <div class="team-card-avatar" aria-hidden="true"><span>SM</span></div>
-            <h3 class="team-card-name">Sarah Mitchell</h3>
-            <p class="team-card-role">Partner & Head of Delivery</p>
-            <p class="team-card-bio">15+ years in software delivery and program leadership. Ensures projects stay on track and stakeholders aligned.</p>
+            <div class="team-card-avatar" aria-hidden="true"><img src="Bogg.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Bogg</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Engineering and consulting. Focus on scalable systems and partnership.</p>
           </div>
           <div class="team-card" data-animate data-animate-delay="2">
-            <div class="team-card-avatar" aria-hidden="true"><span>DC</span></div>
-            <h3 class="team-card-name">David Chen</h3>
-            <p class="team-card-role">Partner & Security Lead</p>
-            <p class="team-card-bio">Security and compliance specialist. Helps clients harden systems and achieve SOC 2, ISO, and industry requirements.</p>
+            <div class="team-card-avatar" aria-hidden="true"><img src="Fazoil.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Fazoil</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Delivery and client success. Ensures projects stay on track.</p>
           </div>
           <div class="team-card" data-animate data-animate-delay="3">
-            <div class="team-card-avatar" aria-hidden="true"><span>AR</span></div>
-            <h3 class="team-card-name">Alex Rivera</h3>
-            <p class="team-card-role">Senior Engineer & AI Practice</p>
-            <p class="team-card-bio">Leads AI adoption and integration work. Background in ML platforms and responsible AI practices.</p>
+            <div class="team-card-avatar" aria-hidden="true"><img src="Jayson Vidal.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Jayson Vidal</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Development and integration. Brings technical depth and clear communication.</p>
+          </div>
+          <div class="team-card" data-animate data-animate-delay="4">
+            <div class="team-card-avatar" aria-hidden="true"><img src="leva.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Leva</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Strategy and execution. Grounded approach to product and delivery.</p>
+          </div>
+          <div class="team-card" data-animate data-animate-delay="5">
+            <div class="team-card-avatar" aria-hidden="true"><img src="Liam.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Liam</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Engineering and architecture. Cloud, security, and scalable solutions.</p>
+          </div>
+          <div class="team-card" data-animate data-animate-delay="6">
+            <div class="team-card-avatar" aria-hidden="true"><img src="Majid.png" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Majid</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">AI practice and integration. ML platforms and responsible AI.</p>
+          </div>
+          <div class="team-card" data-animate data-animate-delay="7">
+            <div class="team-card-avatar" aria-hidden="true"><img src="Manua.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Manua</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Consulting and delivery. Pragmatic approach to technology and partnership.</p>
+          </div>
+          <div class="team-card" data-animate data-animate-delay="8">
+            <div class="team-card-avatar" aria-hidden="true"><img src="Matine.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Matine</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Client engagement and delivery. Keeps stakeholders aligned and projects on track.</p>
+          </div>
+          <div class="team-card" data-animate data-animate-delay="9">
+            <div class="team-card-avatar" aria-hidden="true"><img src="Suliman.jpg" alt="" width="64" height="64"></div>
+            <h3 class="team-card-name">Suliman</h3>
+            <p class="team-card-role">Team</p>
+            <p class="team-card-bio">Strategy and implementation. Natural fit for teams that need results.</p>
           </div>
         </div>
       </div>
