--- a/about.html
+++ b/about.html
@@ -60,67 +60,77 @@
       <div class="container">
         <p class="section-eyebrow" data-animate>Our team</p>
         <h2 class="section-title" data-animate data-animate-delay="1">The people behind Sikor Consultant</h2>
-        <p class="section-lead" data-animate data-animate-delay="2">Senior engineers, architects, and strategists with backgrounds in enterprise IT, product, and consulting. We work in small pods so you get consistency and depth.</p>
-        <div class="team-grid">
-          <div class="team-card" data-animate data-animate-delay="0">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Amalendu.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Amalendu</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">AI product development and delivery. Strategy and implementation.</p>
+        <p class="section-lead" data-animate data-animate-delay="2">We're organized into two teams—Tech and Support—each with a team leader. Senior engineers, architects, and strategists with backgrounds in enterprise IT, product, and consulting.</p>
+
+        <div class="team-group" data-animate data-animate-delay="3">
+          <h3 class="team-group-title">Tech team</h3>
+          <div class="team-grid">
+            <div class="team-card team-card--leader">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Amalendu.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Amalendu</h3>
+              <p class="team-card-role">Tech Team Leader</p>
+              <p class="team-card-bio">Leads the tech team. AI product development, strategy, and implementation.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Bogg.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Bogg</h3>
+              <p class="team-card-role">Tech team</p>
+              <p class="team-card-bio">Engineering and consulting. Focus on scalable systems and partnership.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Fazoil.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Fazoil</h3>
+              <p class="team-card-role">Tech team</p>
+              <p class="team-card-bio">Delivery and client success. Ensures projects stay on track.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Jayson Vidal.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Jayson Vidal</h3>
+              <p class="team-card-role">Tech team</p>
+              <p class="team-card-bio">Development and integration. Technical depth and clear communication.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Liam.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Liam</h3>
+              <p class="team-card-role">Tech team</p>
+              <p class="team-card-bio">Engineering and architecture. Cloud, security, and scalable solutions.</p>
+            </div>
           </div>
-          <div class="team-card" data-animate data-animate-delay="1">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Bogg.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Bogg</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Engineering and consulting. Focus on scalable systems and partnership.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="2">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Fazoil.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Fazoil</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Delivery and client success. Ensures projects stay on track.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="3">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Jayson Vidal.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Jayson Vidal</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Development and integration. Brings technical depth and clear communication.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="4">
-            <div class="team-card-avatar" aria-hidden="true"><img src="leva.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Leva</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Strategy and execution. Grounded approach to product and delivery.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="5">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Liam.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Liam</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Engineering and architecture. Cloud, security, and scalable solutions.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="6">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Majid.png" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Majid</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">AI practice and integration. ML platforms and responsible AI.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="7">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Manua.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Manua</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Consulting and delivery. Pragmatic approach to technology and partnership.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="8">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Matine.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Matine</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Client engagement and delivery. Keeps stakeholders aligned and projects on track.</p>
-          </div>
-          <div class="team-card" data-animate data-animate-delay="9">
-            <div class="team-card-avatar" aria-hidden="true"><img src="Suliman.jpg" alt="" width="64" height="64"></div>
-            <h3 class="team-card-name">Suliman</h3>
-            <p class="team-card-role">Team</p>
-            <p class="team-card-bio">Strategy and implementation. Natural fit for teams that need results.</p>
+        </div>
+
+        <div class="team-group" data-animate data-animate-delay="4">
+          <h3 class="team-group-title">Support team</h3>
+          <div class="team-grid">
+            <div class="team-card team-card--leader">
+              <div class="team-card-avatar" aria-hidden="true"><img src="leva.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Leva</h3>
+              <p class="team-card-role">Support Team Leader</p>
+              <p class="team-card-bio">Leads the support team. Strategy, execution, and client engagement.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Majid.png" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Majid</h3>
+              <p class="team-card-role">Support team</p>
+              <p class="team-card-bio">AI practice and integration. ML platforms and responsible AI.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Manua.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Manua</h3>
+              <p class="team-card-role">Support team</p>
+              <p class="team-card-bio">Consulting and delivery. Pragmatic approach to technology and partnership.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Matine.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Matine</h3>
+              <p class="team-card-role">Support team</p>
+              <p class="team-card-bio">Client engagement and delivery. Keeps stakeholders aligned and projects on track.</p>
+            </div>
+            <div class="team-card">
+              <div class="team-card-avatar" aria-hidden="true"><img src="Suliman.jpg" alt="" width="64" height="64"></div>
+              <h3 class="team-card-name">Suliman</h3>
+              <p class="team-card-role">Support team</p>
+              <p class="team-card-bio">Strategy and implementation. Natural fit for teams that need results.</p>
+            </div>
           </div>
         </div>
       </div>
