--- a/about.html
+++ b/about.html
@@ -65,11 +65,11 @@
         <div class="team-group" data-animate data-animate-delay="3">
           <h3 class="team-group-title">Tech team</h3>
           <div class="team-grid">
-            <div class="team-card team-card--leader">
+            <div class="team-card">
               <div class="team-card-avatar" aria-hidden="true"><img src="Amalendu.jpg" alt="" width="64" height="64"></div>
               <h3 class="team-card-name">Amalendu</h3>
-              <p class="team-card-role">Tech Team Leader</p>
-              <p class="team-card-bio">Leads the tech team. AI product development, strategy, and implementation.</p>
+              <p class="team-card-role">Tech team</p>
+              <p class="team-card-bio">AI product development and delivery. Strategy and implementation.</p>
             </div>
             <div class="team-card">
               <div class="team-card-avatar" aria-hidden="true"><img src="Bogg.jpg" alt="" width="64" height="64"></div>
@@ -89,11 +89,11 @@
               <p class="team-card-role">Tech team</p>
               <p class="team-card-bio">Development and integration. Technical depth and clear communication.</p>
             </div>
-            <div class="team-card">
+            <div class="team-card team-card--leader">
               <div class="team-card-avatar" aria-hidden="true"><img src="Liam.jpg" alt="" width="64" height="64"></div>
               <h3 class="team-card-name">Liam</h3>
-              <p class="team-card-role">Tech team</p>
-              <p class="team-card-bio">Engineering and architecture. Cloud, security, and scalable solutions.</p>
+              <p class="team-card-role">Tech Team Leader</p>
+              <p class="team-card-bio">Leads the tech team. Engineering, architecture, cloud, security, and scalable solutions.</p>
             </div>
           </div>
         </div>
